#106 Fix the issue of language dropdown showing behind the footer in few more pages

--- a/core/static/css/v2/main.less
+++ b/core/static/css/v2/main.less
@@ -151,6 +151,10 @@
 @media (max-width: 500px) {
   #holder {
     overflow: hidden;
+
+    &.single-category, &.article-detail, &.author-detail, &.archive-detail, &.location-detail {
+      overflow: visible;
+    }
   }
 
   .dropdown.custom-dropdown {
