--- a/core/static/css/v2/pages/story/category.less
+++ b/core/static/css/v2/pages/story/category.less
@@ -3,9 +3,6 @@
 @import "../../layout/responsive";
 @import "config";
 
-.single-category {
-    overflow: visible !important;
-}
 
 #main_content{
   margin-top: 0px;
